fixed alignment of buttons

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ a:link {
 a:hover {
 	color:#ff0000;
 }
+
 .copyright {
 	display:block;
 	color:#000000;
@@ -52,8 +53,6 @@ a:hover {
 .links {
 	display:inline;
 	list-style-type: none;
-	margin-right:20px;
-	margin-left:20px;
 	
 }
 
